Ui fixes & meta tags

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
       type="image/png"
       href="./src/assets/icons/favicon-light.png"
     />
+    <meta
+      name="description"
+      content="Check out my portfolio, contact me, or... Whatever you want."
+    />
+    <meta property="og:title" content="Hasan Solak" />
+    <meta
+      property="og:description"
+      content="Check out my portfolio, contact me, or... Whatever you want."
+    />
+    <meta
+      property="og:image"
+      content="https://h-solak.github.io/assets/me-DiOgS9Hi.jpg"
+    />
+    <meta property="og:url" content="https://h-solak.github.io/" />
+
     <title>Hasan Solak</title>
   </head>
   <body>
