meta tag update

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <meta
       property="og:image"
-      content="https://h-solak.github.io/assets/me-DiOgS9Hi.jpg"
+      content="https://raw.githubusercontent.com/h-solak/h-solak.github.io/master/src/assets/icons/favicon-light.png"
     />
     <meta property="og:url" content="https://h-solak.github.io/" />
 
