add experience section & add a new project

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     />
     <meta
       name="description"
-      content="Check out my portfolio, contact me, or... Whatever you want."
+      content="Check out my portfolio, contact me, or... Do whatever you want."
     />
-    <meta property="og:title" content="Hasan Solak" />
+    <meta property="og:title" content="Hasan Solak's Portfolio" />
     <meta
       property="og:description"
-      content="Check out my portfolio, contact me, or... Whatever you want."
+      content="Check out my portfolio, contact me, or... Do whatever you want."
     />
     <meta
       property="og:image"
